--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "devDependencies": {
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   }
 }
