--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "js-talk-webpack",
   "description": "Improving Nearshore - Webpack talk by Luis Espinosa",
   "private": "true",
-  "scripts": {},
+  "scripts": {
+    "build": "webpack",
+    "build:watch": "webpack --watch"
+  },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.5",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
   },
