--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "description": "Improving Nearshore - Webpack talk by Luis Espinosa",
   "private": "true",
   "scripts": {
+    "build:watch": "webpack --watch",
     "build": "webpack",
-    "build:watch": "webpack --watch"
+    "start": "webpack serve"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "styled-components": "^5.3.5"
   }
 }
