--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "private": "true",
   "scripts": {
     "build:watch": "webpack --watch",
-    "build": "webpack",
+    "build": "tsc && webpack",
     "start": "webpack serve"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.6.4",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "styled-components": "^5.3.5"
+    "react-dom": "^18.1.0"
   }
 }
